--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "dependencies": {
-    "gatsby": "^2.0.76",
+    "@emotion/core": "^10.0.14",
+    "gatsby": "^2.13.32",
+    "gatsby-plugin-emotion": "^4.1.2",
     "gatsby-plugin-typography": "^2.3.2",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19"
